# STASRG-SulfurMonitoring-Hardware

./: .gitmodules  README.md
firmware/components/tb600b_v1/: led_func.h  tb600b.cpp
firmware/data_logger/: .clangd  CMakeLists.txt  README.md
firmware/data_logger/main/: CMakeLists.txt  idf_component.yml  main.cpp
firmware/data_logger/tools/: .clang-format  .clangd copy
firmware/data_logger_heltec_arduino/: .clang-format  .clangd  .clineignore  .gitignore  .ignore  README.md  sdkconfig.defaults
firmware/data_logger_heltec_arduino/main/: CMakeLists.txt  idf_component.yml  main copy.cpp  main.cpp  sensor_task.cpp  sensor_task.h  shared_data.h
firmware/data_logger_heltec_arduino/main/battery/: ina219.cpp  ina219.h
firmware/data_logger_heltec_arduino/main/display/: ssd1306.cpp  ssd1306.h  ui_ssd1306.cpp
firmware/data_logger_heltec_arduino/main/include/: board_pins.h
firmware/data_logger_heltec_arduino/main/lora/: sx1262.cpp  sx1262.h
firmware/data_logger_heltec_arduino/main/sensor/: README.md  anemometer.cpp  anemometer.h  gps.cpp  gps.h  tb600_commands.h  tb600_sensor.cpp  tb600_sensor.h  tb600_sensor_cmd.h  wind_direction.cpp  wind_direction.h
firmware/data_logger_heltec_arduino/main/storage/: micro_sdcard.cpp  micro_sdcard.h
firmware/data_logger_heltec_arduino_v2/: .gitignore
firmware/test/ds3231_test/: .clangd
pcb/: gps.kicad_sym
pcb/libraries/: README.md
pcb/symbols/: Custom Board.kicad_sym  README.md  anemometer.kicad_sym  ina219.kicad_sym  ssd1306​.kicad_sym  tb600b.kicad_sym  tb600c.kicad_sym  wind direction.kicad_sym  wsl_v3.kicad_sym
(+266 files in other folders)
